--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,20 @@ out/
 !**/src/main/**/out/
 !**/src/test/**/out/
 
+target/
+!.mvn/wrapper/maven-wrapper.jar
+!**/src/main/**/target/
+!**/src/test/**/target/
+
+### IntelliJ IDEA ###
+.idea/modules.xml
+.idea/jarRepositories.xml
+.idea/compiler.xml
+.idea/libraries/
+*.iws
+*.iml
+*.ipr
+
 ### Eclipse ###
 .apt_generated
 .classpath
@@ -21,6 +35,10 @@ bin/
 /dist/
 /nbdist/
 /.nb-gradle/
+
+build/
+!**/src/main/**/build/
+!**/src/test/**/build/
 
 ### VS Code ###
 .vscode/
